<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Replacements</string>
    <string name="app_name_zs_chocianow">Replacements – ZS Chocianów</string>

    <string name="app_update_link" translatable="false">http://zschocianow.pl/aplikacja-android/</string>
    <string name="new_app_update">App update is available</string>

    <string name="url_schedule_prefix" formatted="false" translatable="false">http://www.zschocianow.pl/plan</string>
    <string name="file_schedule_prefix_1" formatted="false" translatable="false">file:///android_asset</string>
    <string name="file_schedule_prefix_2" formatted="false" translatable="false">file:///android_asset/plany</string>

    <string name="schedule_main_file" formatted="false" translatable="false">lista.html</string>
    <string name="url_repl" formatted="false" translatable="false">http://zschocianow.pl/json/replacements.php?date=</string>
    <string name="url_repl_data" formatted="false" translatable="false">http://zschocianow.pl/json/replacements-data.php</string>
    <string name="url_schedule_json" formatted="false" translatable="false">http://zschocianow.pl/json/lessonplan.php</string>
    <string name="pref_app_version">Application update</string>
    <string name="pref_author">Contact the author</string>
    <string name="app_author_get" translatable="false">Dawid Tarasiuk</string>
    <string name="app_author_info">Google+ account</string>
    <string name="pref_url_author" translatable="false">https://plus.google.com/u/0/105243332659178233856/about</string>
    <string name="pref_email_author" translatable="false">mailto:mail.orzech@gmail.com?subject=Zastępstwa App - temat</string>
    <string name="change_content">Change content</string>
    <string name="refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_all">Refresh all schedules</string>
    <string name="plans_list">Schedules list</string>
    <string name="pref_sync">Auto refresh</string>
    <string name="pref_sync_old">Old auto refresh</string>
    <string name="pref_sync_summ_on">Enabled</string>
    <string name="pref_sync_summ_off">Disabled</string>
    <string name="pref_sync_summ_all">All</string>
    <string name="pref_sync_summ_profile">According to the profile</string>
    <string name="pref_notify">Notifications</string>
    <string name="pref_notify_switch">Enable notifications</string>
    <string name="pref_notify_repl">Notifications about new replacements</string>
    <string name="pref_notify_schedule">Notifications about new schedule</string>
    <string name="pref_freq_data">Frequency for mobile data</string>
    <string name="pref_freq_wifi">Frequency for WI-FI</string>
    <string name="pref_freq_check">Refresh every</string>
    <string name="pref_freq_about">Refreshing every</string>
    <string name="new_content">Changed content</string>
    <string name="no_internet_connect">No internet connection</string>
    <string name="refreshed_no_repl">Refreshed — no new replacements</string>
    <string name="refreshed_repl">Refreshed — new replacements!</string>
    <string name="refreshed_error">Error refresh</string>
    <string name="refreshed_error_part">Partial error refresh</string>
    <string name="new_profile">New options in profile</string>
    <string name="new_home">New news</string>
    <string name="new_replacements">New replacements</string>
    <string name="new_schedule">New schedule</string>
    <string name="no_replacements">Zastępstwa w przygotowaniu</string>
    <string name="no_replacements_desc">Tutaj będą wyświetlane wszystkie zastępstwa, gdy tylko zostaną zaplanowane.</string>
    <string name="set_no_replacements">On this day determined no replacements.</string>
    <string name="click_to_view">Click to view</string>
    <string name="minutes_for_2">minutes</string>
    <string name="minutes_for_5">minutes</string>
    <string name="lesson">lesson</string>
    <string name="repl_for">For</string>
    <string name="no_support_google_api">This device doesn\'t support Google Play services, app won\'t support notifications</string>
    <string name="downloading_schedule">Downloading schedules in progress...</string>
    <string name="no_internet_no_download">No internet connection, can\'t download schedules. Turn on internet and try again.</string>
    <string name="refreshed_all_schedules">Refreshing all schedules finished.</string>

    <!-- Days -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- arrays -->
    <string name="minutes_2">2 minutes</string>
    <string name="minutes_5">5 minutes</string>
    <string name="minutes_15">15 minutes</string>
    <string name="minutes_30">30 minutes</string>
    <string name="minutes_60">60 minutes</string>
    <string name="years_100">100 years</string>
    <string name="not_support_profile">Unfortunately, profile does not work yet.</string>
    <string name="not_support_home">Unfortunately, home does not work yet.</string>
    <string name="not_support_schedule">Unfortunately, schedule does not work yet.</string>

    <!-- Navigation Drawer -->
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="replacements">Replacements</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>

    <!-- Profile Fragment -->
    <string name="tab_class">Class</string>
    <string name="tab_teacher">Teacher</string>
    <string name="choose_classes">Choose classes</string>
    <string name="choose_teachers">Choose teachers</string>
    <string name="type_choose">Choose</string>
    <string name="type_cancel">Cancel</string>
    <string name="profile_no_class">Not selected classes</string>
    <string name="profile_no_teacher">Not selected teachers</string>
    <string name="profile_no_class_desc">Dodanie do profilu klas, powoduje otrzymywanie powiadomień o zastępstwach tylko dla wybranych.</string>
    <string name="profile_no_teacher_desc">Dodanie do profilu nauczycieli, powoduje otrzymywanie powiadomień o zastępstwach tylko dla wybranych.</string>

    <!-- Preferences -->
    <!-- HERE IS NOT ALL -->
    <string name="pref_main_file_name">Name of main file of schedules</string>
    <string name="pref_fcm_token_title">FCM Token</string>
    <string name="pref_schedule_offline_switch">Offline schedule</string>

    <!-- USTAWIENIA DODANE DLA GIMNAZJUM -->
    <string name="pref_school">Chosen school</string>
    <string name="pref_school_summary">Name of school</string>
    <string name="loading_school_data">Downloading school data in progress&#8230;</string>
    <string name="school_name_0">No school selected</string>
    <string name="school_name_1">Gimnazjum im. Odkrywców Polskiej Miedzi w Chocianowie</string>
    <string name="school_name_2">Zespół Szkół w Chocianowie</string>
    <string name="loading">Loading&#8230;</string>
    <string name="choose_other_school">Choose other school</string>
    <string name="loading_school_data_error">Failed to fetch school data. Please try again later.</string>


    <!-- TODO following strings are for new app order -->
    <string name="nav_schools">Schools</string>
    <string name="nav_group_assistant">Assistant</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedules">Schedules</string>
    <string name="nav_replacements">Replacements</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">About service</string>
    <string name="nav_schools_management">Schools management</string>
    <string name="app_version_info">Your current version is 0.0.130</string>
    <string name="app_version_refresh">Check availability of new version</string>
    <string name="pref_gcm_key_title">FCM Token</string>
    <string name="pref_url_adress_schedules_list">URL address to list of schedules</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- Following strings are for new app -->
    <plurals name="news_header">
        <item quantity="one">"News"</item>
        <item quantity="other">"News"</item>
    </plurals>
    <plurals name="schedule_header">
        <item quantity="one">"Schedule"</item>
        <item quantity="other">"Schedules"</item>
    </plurals>
    <plurals name="replacement_header">
        <item quantity="one">"Replacement"</item>
        <item quantity="other">"Replacements"</item>
    </plurals>
    <plurals name="institution_header">
        <item quantity="one">"Institution"</item>
        <item quantity="other">"Institutions"</item>
    </plurals>


</resources>