<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_notify"
        android:key="pref_notify">
        <CheckBoxPreference
            android:title="@string/pref_notify_switch"
            android:key="pref_notify_switch"
            android:defaultValue="true"
            android:summaryOn="@string/pref_sync_summ_on"
            android:summaryOff="@string/pref_sync_summ_off"/>
        <ListPreference
            android:title="@string/pref_notify_repl"
            android:key="pref_notify_repl"
            android:dependency="pref_notify_switch"
            android:defaultValue="1"
            android:entries="@array/pref_notify_repl_entries"
            android:entryValues="@array/pref_notify_repl_entryValues" />
        <!--<ListPreference-->
            <!--android:title="@string/pref_notify_schedule"-->
            <!--android:key="pref_notify_schedule"-->
            <!--android:dependency="pref_notify_switch"-->
            <!--android:defaultValue="1"-->
            <!--android:entries="@array/pref_notify_schedule_entries"-->
            <!--android:entryValues="@array/pref_notify_schedule_entryValues" />-->
        <!--<CheckBoxPreference-->
            <!--android:title="@string/pref_schedule_offline_switch"-->
            <!--android:key="pref_schedule_offline_switch"-->
            <!--android:defaultValue="true"-->
            <!--android:summaryOn="@string/pref_sync_summ_on"-->
            <!--android:summaryOff="@string/pref_sync_summ_off"/>-->
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_author"
        android:key="pref_author_settings">
        <Preference
			android:title="@string/app_author_get"
			android:summary="@string/app_author_info"
			android:key="author_info">
			<intent
				android:action="android.intent.action.VIEW"
				android:data="@string/pref_url_author" />
		</Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Opcje programistyczne"
        android:key="pref_app_dev_settings">
        <EditTextPreference
            android:title="@string/pref_main_file_name"
            android:defaultValue="@string/schedule_main_file"
            android:key="schedule_main_file"
            android:imeOptions="actionDone"/>
        <EditTextPreference
            android:title="@string/pref_fcm_token_title"
            android:summary=""
            android:defaultValue=""
            android:key="pref_fcm_token"
            android:imeOptions="actionDone"/>
    </PreferenceCategory>
</PreferenceScreen>