<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_new_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schools_new"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_schools" />
    </group>
    <item android:title="@string/nav_group_assistant">
        <menu>
            <group
                android:id="@+id/nav_group_new_2"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home_new"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_home"/>
                <item
                    android:id="@+id/nav_schedules_new"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_schedules" />
                <ExpandableListView
                    android:id="@+id/lvExp"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"/>
                <item
                    android:id="@+id/nav_replacements_new"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_replacements" />
                <item
                    android:id="@+id/nav_settings_new"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/nav_settings" />
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/nav_group_new_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info_new"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_schools_management_new"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_schools_management" />
    </group>
</menu>