<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/nav_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_grey600_36dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey600_36dp"
            android:title="@string/home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_replacements"
            android:icon="@drawable/ic_group_grey600_36dp"
            android:title="@string/replacements" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event_grey600_36dp"
            android:title="@string/schedule" />
    </group>
    <group android:id="@+id/nav_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_36dp"
            android:title="@string/settings" />
    </group>
</menu>